--- a/test/tests.yml
+++ b/test/tests.yml
@@ -3,7 +3,7 @@
 ################
 
 - scenario: install_containerd_external
-  initVersion: v1.28.7
+  initVersion: v1.28.13
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -32,7 +32,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.29.2
+  initVersion: v1.29.8
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -61,7 +61,36 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.30.1
+  initVersion: v1.30.4
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_default
+      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
+    - name: aws_ubuntu_previous_lts
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_flatcar
+    - name: equinixmetal_rockylinux
+    - name: gce_default
+    - name: hetzner_default
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_flatcar
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: install_containerd_external
+  initVersion: v1.31.0
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -90,7 +119,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd
-  initVersion: v1.28.7
+  initVersion: v1.28.13
   infrastructures:
     - name: azure_default
     - name: azure_flatcar
@@ -103,8 +132,8 @@
 ###################
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.28.7
-  upgradedVersion: v1.29.2
+  initVersion: v1.28.13
+  upgradedVersion: v1.29.8
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_default_stable
@@ -132,8 +161,37 @@
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.29.2
-  upgradedVersion: v1.30.1
+  initVersion: v1.29.8
+  upgradedVersion: v1.30.4
+  infrastructures:
+    - name: aws_amzn_stable
+    - name: aws_default_stable
+    - name: aws_ubuntu_previous_lts
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_flatcar_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: gce_default_stable
+    - name: hetzner_default_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_default_stable
+    - name: openstack_flatcar_stable
+    - name: openstack_rhel_stable
+    - name: openstack_rockylinux_stable
+    - name: vsphere_default_stable
+    - name: vsphere_flatcar_stable
+
+- scenario: upgrade_containerd_external
+  initVersion: v1.30.4
+  upgradedVersion: v1.31.0
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_default_stable
@@ -165,7 +223,7 @@
 ###########################
 
 - scenario: calico_containerd_external
-  initVersion: v1.28.7
+  initVersion: v1.28.13
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -192,7 +250,7 @@
     - name: vsphere_flatcar
 
 - scenario: calico_containerd_external
-  initVersion: v1.29.2
+  initVersion: v1.29.8
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -219,7 +277,34 @@
     - name: vsphere_flatcar
 
 - scenario: calico_containerd_external
-  initVersion: v1.30.1
+  initVersion: v1.30.4
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_flatcar
+    - name: equinixmetal_rockylinux
+    - name: gce_default
+    - name: hetzner_default
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_flatcar
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: calico_containerd_external
+  initVersion: v1.31.0
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -246,7 +331,7 @@
     - name: vsphere_flatcar
 
 - scenario: cilium_containerd_external
-  initVersion: v1.28.7
+  initVersion: v1.28.13
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -273,7 +358,7 @@
     - name: vsphere_flatcar
 
 - scenario: cilium_containerd_external
-  initVersion: v1.29.2
+  initVersion: v1.29.8
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -300,7 +385,34 @@
     - name: vsphere_flatcar
 
 - scenario: cilium_containerd_external
-  initVersion: v1.30.1
+  initVersion: v1.30.4
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_flatcar
+    - name: equinixmetal_rockylinux
+    - name: gce_default
+    - name: hetzner_default
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_flatcar
+    - name: openstack_rhel
+    - name: openstack_rockylinux
+    - name: vsphere_default
+    - name: vsphere_flatcar
+
+- scenario: cilium_containerd_external
+  initVersion: v1.31.0
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -327,7 +439,7 @@
     - name: vsphere_flatcar
 
 - scenario: external_cni_flannel_helm_chart
-  initVersion: v1.27.11
+  initVersion: v1.28.13
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -354,7 +466,7 @@
     - name: vsphere_flatcar
 
 - scenario: external_cni_flannel_helm_chart
-  initVersion: v1.28.7
+  initVersion: v1.29.8
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -381,7 +493,7 @@
     - name: vsphere_flatcar
 
 - scenario: external_cni_flannel_helm_chart
-  initVersion: v1.29.2
+  initVersion: v1.30.4
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -408,7 +520,7 @@
     - name: vsphere_flatcar
 
 - scenario: external_cni_flannel_helm_chart
-  initVersion: v1.30.1
+  initVersion: v1.31.0
   infrastructures:
     - name: aws_amzn
     - name: aws_default
@@ -435,8 +547,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_cilium_containerd_external
-  initVersion: v1.28.7
-  upgradedVersion: v1.29.2
+  initVersion: v1.28.13
+  upgradedVersion: v1.29.8
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_default_stable
@@ -463,8 +575,36 @@
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_cilium_containerd_external
-  initVersion: v1.29.2
-  upgradedVersion: v1.30.1
+  initVersion: v1.29.8
+  upgradedVersion: v1.30.4
+  infrastructures:
+    - name: aws_amzn_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_default_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_flatcar_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: gce_default_stable
+    - name: hetzner_default_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_default_stable
+    - name: openstack_flatcar_stable
+    - name: openstack_rhel_stable
+    - name: openstack_rockylinux_stable
+    - name: vsphere_default_stable
+    - name: vsphere_flatcar_stable
+
+- scenario: upgrade_cilium_containerd_external
+  initVersion: v1.30.4
+  upgradedVersion: v1.31.0
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_default_stable
@@ -494,22 +634,27 @@
 # CONFORMANCE TEST #
 ####################
 - scenario: conformance_containerd_external
-  initVersion: v1.28.7
+  initVersion: v1.28.13
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.29.2
+  initVersion: v1.29.8
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.30.1
+  initVersion: v1.30.4
+  infrastructures:
+    - name: aws_long_timeout_default
+
+- scenario: conformance_containerd_external
+  initVersion: v1.31.0
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: kube_proxy_ipvs_external
-  initVersion: v1.30.1
+  initVersion: v1.31.0
   infrastructures:
     - name: aws_default
 
@@ -518,7 +663,7 @@
 #####################
 
 - scenario: csi_ccm_migration
-  initVersion: v1.28.7
+  initVersion: v1.28.13
   infrastructures:
     - name: azure_default
     - name: azure_flatcar
