--- a/test/e2e/testdata/containerd_simple_external.yaml
+++ b/test/e2e/testdata/containerd_simple_external.yaml
@@ -1,13 +1,16 @@
-apiVersion: kubeone.k8c.io/v1beta3
+apiVersion: kubeone.k8c.io/v1beta2
 kind: KubeOneCluster
 
 versions:
   kubernetes: "{{ required ".VERSION is required" .VERSION }}"
 
-cloudProvider:
-  external: true
+containerRuntime:
+  containerd: {}
 
 addons:
+  enable: true
   addons:
-    - addon:
-        name: default-storage-class
+  - name: default-storage-class
+
+cloudProvider:
+  external: true
