--- a/test/e2e/testdata/legacy_machine_controller_containerd_external.yaml
+++ b/test/e2e/testdata/legacy_machine_controller_containerd_external.yaml
@@ -1,8 +1,11 @@
-apiVersion: kubeone.k8c.io/v1beta3
+apiVersion: kubeone.k8c.io/v1beta2
 kind: KubeOneCluster
 
 versions:
   kubernetes: "{{ required ".VERSION is required" .VERSION }}"
+
+containerRuntime:
+  containerd: {}
 
 operatingSystemManager:
   deploy: false
@@ -11,6 +14,6 @@ cloudProvider:
   external: true
 
 addons:
+  enable: true
   addons:
-    - addon:
-        name: default-storage-class
+  - name: default-storage-class
