fix kubevirt csi addon template

--- a/addons/csi-kubevirt/1-kubevirt-csi-driver.yaml
+++ b/addons/csi-kubevirt/1-kubevirt-csi-driver.yaml
@@ -96,7 +96,7 @@ spec:
             privileged: true
             allowPrivilegeEscalation: true
           imagePullPolicy: Always
-          image: '{{ .InternalImages.Get "KubeVirtCSIDriver" }}'
+          image: '{{ .InternalImages.Get "KubeVirtCSI" }}'
           args:
             - "--endpoint=unix:/csi/csi.sock"
             - "--node-name=$(KUBE_NODE_NAME)"
