--- a/addons/machinecontroller/webhook.yaml
+++ b/addons/machinecontroller/webhook.yaml
@@ -101,6 +101,12 @@ spec:
               value: "{{ .Config.Proxy.HTTPS }}"
             - name: NO_PROXY
               value: "{{ .Config.Proxy.NoProxy }}"
+{{ with .Config.CloudProvider.Kubevirt -}}
+{{ with .InfraNamespace }}
+            - name: POD_NAMESPACE
+              value: "{{ . }}"
+{{ end }}
+{{ end }}
 {{ .MachineControllerCredentialsEnvVars | indent 12 }}
 {{ if .Config.CABundle }}
 {{ caBundleEnvVar | indent 12 }}
